--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@storybook/addon-info": "^5.1.10",
+    "@storybook/addon-knobs": "^5.0.1",
+    "@storybook/addon-links": "^5.0.1",
+    "@storybook/addons": "^5.0.1",
+    "@storybook/react": "^5.0.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "del": "^2.2.2",
@@ -54,12 +59,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-uglify": "^3.0.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "@storybook/react": "^5.0.1",
-    "@storybook/addon-info": "^5.0.1",
-    "@storybook/addon-knobs": "^5.0.1",
-    "@storybook/addon-links": "^5.0.1",
-    "@storybook/addons": "^5.0.1"
+    "react-dom": "^16.4.1"
   },
   "peerDependencies": {
     "react": "^16.4.1",
