--- a/react-fileicons/package.json
+++ b/react-fileicons/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-fileicons",
-	"version": "2.2.6",
+	"version": "2.2.7",
 	"description": "A React component to use file icons more flexible.",
 	"author": "tomxpcvx",
 	"keywords": [
@@ -34,6 +34,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"preinstall": "npx force-resolutions",
 		"start": "react-scripts start",
 		"build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files",
 		"test": "react-scripts test",
@@ -61,6 +62,10 @@
 		"@babel/cli": "^7.16.8",
 		"@babel/core": "^7.16.12",
 		"@babel/preset-env": "^7.16.11",
-		"prop-types": "^15.8.1"
+		"prop-types": "^15.8.1",
+		"nth-check": "^2.1.1"
+	},
+	"resolutions": {
+		"nth-check": "^2.1.1"
 	}
 }
