--- a/storybook/package.json
+++ b/storybook/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+	"preinstall": "npx force-resolutions",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -40,7 +41,15 @@
     "babel-plugin-polyfill-corejs3": "^0.5.1",
     "core-js": "^3.20.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "glob-parent": "^6.0.2",
+    "trim": "^1.0.1",
+    "trim-newlines": "^4.0.2"
+  },
+  "resolutions": {
+    "trim": "^1.0.1",
+    "trim-newlines": "^4.0.2",
+    "glob-parent": "^6.0.2"
   },
   "dependencies": {
     "react-fileicons": "../react-fileicons"
