--- a/react-fileicons/package.json
+++ b/react-fileicons/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-fileicons",
-	"version": "2.2.10",
+	"version": "2.2.11",
 	"description": "A React component to use file icons more flexible.",
 	"author": "tomxpcvx",
 	"keywords": [
@@ -22,23 +22,15 @@
 		"url": "git+https://github.com/tomxpcvx/react-fileicons.git"
 	},
 	"dependencies": {
-		"@babel/polyfill": "^7.12.1",
-		"@testing-library/jest-dom": "^5.16.1",
-		"@testing-library/react": "^12.1.2",
-		"@testing-library/user-event": "^13.5.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-scripts": "5.0.0",
 		"styled-components": "^5.3.3",
 		"typeface-roboto": "^1.1.13",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"preinstall": "npx force-resolutions",
-		"start": "react-scripts start",
-		"build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -61,9 +53,11 @@
 	"devDependencies": {
 		"@babel/cli": "^7.16.8",
 		"@babel/core": "^7.16.12",
+		"@babel/polyfill": "^7.12.1",
 		"@babel/preset-env": "^7.16.11",
-		"prop-types": "^15.8.1",
-		"nth-check": "^2.1.1"
+		"@babel/preset-react": "^7.18.6",
+		"nth-check": "^2.1.1",
+		"prop-types": "^15.8.1"
 	},
 	"resolutions": {
 		"nth-check": "^2.1.1"
